# pylogtrail

./: .dockerignore  .gitignore  Dockerfile  README.md  RETENTION.md  docker-compose.yml  pyproject.toml  requirements-pytest.txt  requirements.txt  retention_config.yml  test_download_api.py  test_retention.py
.github/: dependabot.yml
.github/workflows/: claude.yml  test.yml
docker/: entrypoint.sh  init-db.sql  mysql.cnf
src/: generate-fake-logs.py  start.sh
src/pylogtrail/cli/: retention.py
src/pylogtrail/client/: __init__.py  handlers.py
src/pylogtrail/config/: retention.py
src/pylogtrail/db/: models.py  session.py
src/pylogtrail/retention/: manager.py
src/pylogtrail/server/: app.py  download_api.py  http_handler.py  retention_api.py  socketio.py  udp_handler.py
src/pylogtrail/server/static/: index.html  main.js  table.js
src/pylogtrail/server/static/assets/: index-E9trlmPM.css  index-dWJH44jo.css
tests/: __init__.py  conftest.py  test_client_handlers.py  test_download_api.py
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: main.tsx
web-ui/src/components/: filter_panel.tsx  import_modal.tsx  log_entry.ts  socket.ts  table.tsx
web-ui/src/pages/: home.tsx
web-ui/src/types/: log.ts
