[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylogtrail"
version = "0.1.0"
description = "A modern Python logging system with web interface and structured storage"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "PyLogTrail Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "SQLAlchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.12.0",
    "flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pylogtrail"
Documentation = "https://pylogtrail.readthedocs.io/"
Repository = "https://github.com/yourusername/pylogtrail.git"
Issues = "https://github.com/yourusername/pylogtrail/issues"

[project.scripts]
pylogtrail-server = "pylogtrail.server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pylogtrail"]
include = [
    "src/pylogtrail/server/static/**/*",
    "src/pylogtrail/server/templates/**/*",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pylogtrail --cov-report=term-missing" 